<resources>
    <string name="mongo_stitch_id">canscandb-cgwjo</string>
    
    <string name="app_name">CanScan</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="login_btn">Login</string>
    <string name="new_user_textView">New User? Click </string>
    <string name="here">Here!</string>

    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="create_account_header">Create Account</string>

    <string name="you_have_earned_textView">You Have Earned</string>
    <string name="points_textView">Spendable Points!</string>
    <string name="bottle_scanner">Bottle Scanner</string>
    <string name="leader_board">LeaderBoard</string>
    <string name="rewards">Rewards</string>
    <string name="profile">User Profile</string>
    <string name="welcome">Welcome</string>
    <string name="open_buffalo_href_textView_1">For accepted recyclable materials,</string>
    <string name="open_buffalo_href_textView_2">please click </string>

    <string name="top_r">edeem</string>
    <string name="center_r">ecycling</string>
    <string name="lower_r">ewards</string>
    <string name="capital_r">R</string>
    <string name="nfta_btn_text">1,000 Points</string>
    <string name="bike_btn_text">2,500 Points</string>
    <string name="bills_btn_text">15,000 Points</string>
    <string name="sabres_btn_text">15,000 Points</string>

    <string name="profile_total_point">Total Points:</string>
    <string name="profile_metro_tickets">Metro Tickets:</string>
    <string name="profile_bike_share_tickets">Bike Share Tickets:</string>
    <string name="profile_game_tickets">Sabres/Bills Tickets:</string>
    <string name="profile_current_zipcode">Zipcode:</string>
    <string name="profile_update_zipcode">Update Zipcode</string>
    <string name="profile_update_username">Update Username</string>
    <string name="profile_update_password">Update Password</string>
    <string name="profile_pick_up_day">Your Recycle Pick Up Day:</string>

    <string name="update_profile">Update Profile</string>
</resources>
