<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/you_have_earned_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_earned_textView"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@id/score_start_vertical_guideline"
        app:layout_constraintTop_toTopOf="@id/score_top_horizonal_guideline"/>

    <TextView
        android:id="@+id/earned_points_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_55ssp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/score_start_vertical_guideline"
        app:layout_constraintEnd_toEndOf="@id/score_end_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/you_have_earned_textView"/>

    <TextView
        android:id="@+id/earned_points_below_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points_textView"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toStartOf="@id/score_end_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/earned_points_textView"/>
    
    <View
        android:id="@+id/horizontal_divider_line"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/button_start_vertical_guideline"
        app:layout_constraintEnd_toEndOf="@id/button_end_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/earned_points_below_textView"/>

    <Button
        android:id="@+id/scan_code_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn"
        android:drawableStart="@drawable/camera_icon"
        android:text="@string/bottle_scanner"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/button_start_vertical_guideline"
        app:layout_constraintEnd_toEndOf="@id/button_end_vertical_guideline"
        app:layout_constraintTop_toTopOf="@id/scan_code_btn_guideline"/>

    <Button
        android:id="@+id/leader_board_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn"
        android:drawableStart="@drawable/trophy_icon"
        android:text="@string/leader_board"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/button_start_vertical_guideline"
        app:layout_constraintEnd_toEndOf="@id/button_end_vertical_guideline"
        app:layout_constraintTop_toTopOf="@id/leader_board_btn_guideline"/>

    <Button
        android:id="@+id/rewards_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn"
        android:drawableStart="@drawable/leaf_icon"
        android:text="@string/rewards"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/button_start_vertical_guideline"
        app:layout_constraintEnd_toEndOf="@id/button_end_vertical_guideline"
        app:layout_constraintTop_toTopOf="@id/rewards_btn_guideline" />

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn"
        android:drawableStart="@drawable/profile_icon"
        android:text="@string/profile"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/button_start_vertical_guideline"
        app:layout_constraintEnd_toEndOf="@id/button_end_vertical_guideline"
        app:layout_constraintTop_toTopOf="@id/settings_btn_guideline" />

    <TextView
        android:id="@+id/open_buffalo_href_textView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_buffalo_href_textView_1"
        android:textColor="@color/grey"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toTopOf="@id/open_buffalo_href_textView_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/open_buffalo_href_textView_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/open_buffalo_href_textView_2"
        android:textColor="@color/grey"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/open_buffalo_href_link"
        app:layout_constraintStart_toStartOf="@id/open_buffalo_href_textView_1" />

    <TextView
        android:id="@+id/open_buffalo_href_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/here"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="@id/open_buffalo_href_textView_2"
        app:layout_constraintEnd_toEndOf="@id/open_buffalo_href_textView_1"
        app:layout_constraintStart_toEndOf="@id/open_buffalo_href_textView_2"
        app:layout_constraintTop_toTopOf="@id/open_buffalo_href_textView_2" />

    <android.support.constraint.Guideline
        android:id="@+id/scan_code_btn_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4"/>

    <android.support.constraint.Guideline
        android:id="@+id/leader_board_btn_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".525"/>

    <android.support.constraint.Guideline
        android:id="@+id/rewards_btn_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".65"/>

    <android.support.constraint.Guideline
        android:id="@+id/settings_btn_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".775"/>

    <android.support.constraint.Guideline
        android:id="@+id/button_start_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".2"/>

    <android.support.constraint.Guideline
        android:id="@+id/button_end_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8"/>

    <android.support.constraint.Guideline
        android:id="@+id/score_start_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".3"/>

    <android.support.constraint.Guideline
        android:id="@+id/score_end_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".65"/>

    <android.support.constraint.Guideline
        android:id="@+id/score_top_horizonal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1"/>

</android.support.constraint.ConstraintLayout>