<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    tools:context=".CreateUserActivity">

    <TextView
        android:id="@+id/new_user_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_header"
        android:textSize="@dimen/_38ssp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/new_user_header_guideline"/>

    <EditText
        android:id="@+id/new_user_username_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:digits="aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUvVwWxXyYzZ1234567890 "
        android:singleLine="true"
        android:hint="@string/username_login"
        android:maxLength="12"
        style="@style/LoginCred"
        app:layout_constraintStart_toStartOf="@id/new_user_start_vertical_guideline"
        app:layout_constraintEnd_toEndOf="@id/new_user_end_vertical_guideline"
        app:layout_constraintTop_toTopOf="@id/new_user_username_top_guideline" />

    <EditText
        android:id="@+id/new_user_password_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_login"
        android:digits="aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUvVwWxXyYzZ1234567890"
        android:singleLine="true"
        android:maxLength="12"
        style="@style/LoginCred"
        app:layout_constraintStart_toStartOf="@id/new_user_start_vertical_guideline"
        app:layout_constraintEnd_toEndOf="@id/new_user_end_vertical_guideline"
        app:layout_constraintTop_toTopOf="@id/new_user_password_top_guideline" />

    <Button
        android:id="@+id/new_user_cancel_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="@dimen/_12ssp"
        android:background="@drawable/login_cancel_button"
        app:layout_constraintStart_toStartOf="@id/new_user_start_vertical_guideline"
        app:layout_constraintEnd_toEndOf="@id/new_user_end_cancel_btn_guideline"
        app:layout_constraintTop_toTopOf="@id/new_user_accept_cancel_guideline" />

    <Button
        android:id="@+id/new_user_accept_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:textSize="@dimen/_12ssp"
        android:background="@drawable/login_btn"
        app:layout_constraintStart_toStartOf="@id/new_user_start_accept_btn_guideline"
        app:layout_constraintEnd_toEndOf="@id/new_user_end_vertical_guideline"
        app:layout_constraintTop_toTopOf="@id/new_user_accept_cancel_guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/new_user_header_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />

    <android.support.constraint.Guideline
        android:id="@+id/new_user_start_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".15" />

    <android.support.constraint.Guideline
        android:id="@+id/new_user_end_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".85" />

    <android.support.constraint.Guideline
        android:id="@+id/new_user_username_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".4" />

    <android.support.constraint.Guideline
        android:id="@+id/new_user_password_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <android.support.constraint.Guideline
        android:id="@+id/new_user_accept_cancel_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".7"/>

    <android.support.constraint.Guideline
        android:id="@+id/new_user_end_cancel_btn_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".45"/>

    <android.support.constraint.Guideline
        android:id="@+id/new_user_start_accept_btn_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".55"/>

</android.support.constraint.ConstraintLayout>